<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".TakeReadings">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/app_name"
        android:textColor="#004D40"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin = "20dp"
        app:layout_constraintTop_toBottomOf="@+id/progressBar">

        <LinearLayout
            android:id="@+id/mainLeft"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/leftBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="30sp"
                android:text="@string/left_hand"
                android:background="@drawable/button_layout" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                tools:ignore="NestedWeights">

                <Button
                    android:id="@+id/left11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_layout"
                    android:text="@string/left_index"
                    tools:ignore="NestedWeights,TouchTargetSizeCheck">

                </Button>

                <Button
                    android:id="@+id/left12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_layout"
                    android:minHeight="48dp"
                    android:text="@string/left_middle"
                    tools:ignore="TouchTargetSizeCheck">

                </Button>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/left21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/left_ring"
                    android:background="@drawable/button_layout"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp">

                </Button>

                <Button
                    android:id="@+id/left22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/left_little"
                    android:background="@drawable/button_layout"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp">

                </Button>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mainRight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/rightBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30sp"
                android:text="@string/right_hand"
                android:layout_gravity="center"
                android:background="@drawable/button_layout"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/right11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/right_index"
                    android:background="@drawable/button_layout"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp">

                </Button>

                <Button
                    android:id="@+id/right12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/right_middle"
                    android:background="@drawable/button_layout"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp">

                </Button>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/right21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/right_ring"
                    android:background="@drawable/button_layout"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp">

                </Button>

                <Button
                    android:id="@+id/right22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/right_little"
                    android:background="@drawable/button_layout"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp">

                </Button>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/nextBtnFinal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        android:background="@drawable/button_layout"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>